Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,11 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08333333333333333"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "Pa = (1/2)  \n",
+    "Pb = (1/6)\n",
+    "prob = Pa * Pb\n",
+    "prob"
    ]
   },
   {
@@ -56,11 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7290000000000001"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "Pa = (9/10) \n",
+    "prob = Pa**3\n",
+    "prob"
    ]
   },
   {
@@ -75,11 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution "
+    "# Your solution\n",
+    "PB = .7 \n",
+    "PAB = .35 \n",
+    "PAgivenB = PAB/PB\n",
+    "prob"
    ]
   },
   {
@@ -99,11 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004524886877828055"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "PA = (4/52)\n",
+    "PBgivenA = (3/51) \n",
+    "\n",
+    "PAgivenB = (PBgivenA * PA)\n",
+    "PAgivenB"
    ]
   },
   {
@@ -119,11 +179,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8559987631416203"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "PA = (95/100) \n",
+    "PBgivenA = (94/99) \n",
+    "PCgivenBandA = (93/98) \n",
+    "P = PA * PBgivenA * PCgivenBandA\n",
+    "P"
    ]
   },
   {
@@ -221,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
